--- a/css/stylesold.css
+++ b/css/stylesold.css
@@ -153,7 +153,7 @@ border-radius: 2px;
     color: #2e2f42;
     /* Колір тексту */
 }
-/* */
+
 .menu {
     display: flex;
     gap: 40px;
@@ -408,24 +408,26 @@ justify-content: center;
 gap: 24px;
 }
 /* 3 секція лішка списка соцмереж*/
-.social-network-item{
+.social-network-item {
     width: 40px;
     height: 40px;
-    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 /*значок посилання трейдингу 3 секція*/
-.traling-icon{
-width: 100%;
-height: 100%;
-background-color:#4d5ae5;
-border-radius:50%;
-display: flex;
-align-items: center;
-justify-content: center;
-transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.traling-icon {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .traling-icon:hover,
-.traling-icon:focus{
+.traling-icon:focus {
     background-color: #404bbf;
 }
 .ellipse {
@@ -485,6 +487,41 @@ padding: 32px 0;
     position: relative;
     overflow: hidden;
 }
+
+/*
+
+<picture><source srcset="./images/app.jpg, ./images/app2x.jpg"
+media="(min-width: 1158px)"
+/><source srcset="./images/app.jpg, ./images/app2x.jpg"
+media="(min-width: 768px)"
+/><source srcset="./images/app.jpg, ./images/app2x.jpg"
+media="(max-width: 767px)"
+/><img class="box-img"
+srcset="./images/app.jpg 1x, ./images/app2x.jpg 2x"
+src="./images/app.jpg"
+alt="Banking App"
+width="360"
+height="300"
+/></picture>
+
+
+<img
+                  src="./images/qr.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />*/
+
+
+
+
+
+
+
+
+
+
+
 .box-paragraph
 {
     position: absolute;
