--- a/css/styles.css
+++ b/css/styles.css
@@ -998,7 +998,6 @@ input:focus {
     margin-bottom: 16px;
     margin-top: 8px;
 }
-
 .user-comment {
     width: 100%;
     height: 120px;
@@ -1025,7 +1024,6 @@ svg:focus {
 }
 
 .policy-div {
-    width: 100%;
     margin-bottom: 24px;
 }
 
@@ -1100,15 +1098,15 @@ input:checked+label>span {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 9999;
     width: 100%;
     height: 100%;
-    background-color: #fff; 
+    background-color: #fff;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
     .mobile-menu.is-open {
     opacity: 1;
     visibility: visible;
@@ -1124,11 +1122,46 @@ input:checked+label>span {
 }
 .mobile-menu-close {
     position: absolute;
-    top: 24px;
-    right: 24px;
-}
+        top: 24px;
+        right: 24px;
+        fill: #2e2f42;
+        border-radius: 50%;
+        padding: 0;
+        width: 24px;
+        height: 24px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        line-height: 0;
+        background-color: #fff;
+        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 .mobile-menu-nav {
     margin-bottom: auto;
+}
+.mobile-menu-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+.menu-link{
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        }
+.mobile-menu-contacts-list {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 48px;
+    font-style: normal;
+}
+.traling-icons {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
 @media screen and (min-width: 768px) {
     .mobile-menu {
