--- a/css/styles.css
+++ b/css/styles.css
@@ -250,23 +250,24 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*hero перша секція section*/
 /* Стилі для першої секції */
-.main_section {
-    background-color: #2e2f42;
+.main_section {background-color: #2e2f42;
     /* Фон секції */
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
-        url(../images/people-office-mob1x.jpg);
+        url(../images/people-office-min.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding-top: 72px;
-    padding-bottom: 72px;
-    max-width: 320px;
-    min-height: 432px;
+    max-width: 1440px;
     margin: 0 auto;
-    /*
-    */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 188px 0;
 }
+    
+
 @media screen and (min-width:768px) and (min-resolution: 192dpi){
     /* Стилі для першої секції */
         .main_section {
