--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,4 @@
-.hidden{
-    display: none;
-}
+
 /* Основні стилі для тіла сторінки */
 body {
     font-family: Roboto, sans-serif;
@@ -1099,7 +1097,7 @@ input:checked+label>span {
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 9999;
+    z-index: 99999;
     width: 100%;
     height: 100%;
     background-color: #fff;
@@ -1143,7 +1141,7 @@ input:checked+label>span {
     flex-direction: column;
     gap: 40px;
 }
-.menu-link{
+.menu-link-m{
         font-weight: 700;
         font-size: 36px;
         line-height: 1.11;
