--- a/css/styles.css
+++ b/css/styles.css
@@ -115,7 +115,6 @@ img {
     color: #4d5ae5;
 }
 .link/*heder-logo*/ {
-    padding: 16px 0;
     display: block;
 
 }
@@ -264,7 +263,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 188px 0;
+    padding: 72px 0;
 }
     
 
@@ -290,9 +289,10 @@ margin: 0 auto;
                 rgba(46, 47, 66, 0.7)),
             url(../images/people-office-min.jpg);
         position: relative;
-            max-width: 1440px;
+        max-width: 1440px;
         overflow: hidden;
         background-size: cover;
+        padding: 188px 0;
     }
 }
 /* Стилі для заголовка */
@@ -387,7 +387,7 @@ gap: 72px;
 }
 @media screen and (min-width:768px) {
     .benefits-list {
-
+        flex-direction: row;
         gap: 72px 24px;
         width: 100%;
     }
@@ -563,7 +563,6 @@ text-align: left;
 
 .portfolio-list {
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translateY(0%);
 }
 .portfolio-item {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -623,7 +622,7 @@ text-align: left;
     /* Колір тексту */
 }
 .portfolio-item {
-    width: calc((100% - 48px)/3);
+
     flex-wrap: wrap;
     gap: 48px 24px;
     border-radius: 0px 0px 4px 4px;
@@ -636,6 +635,9 @@ text-align: left;
         row-gap: 72px;
         column-gap: 24px;
     }
+        .portfolio-item {
+            flex-basis: calc((100% - 24px) / 2);
+        }
 }
 @media screen and (min-width:1158px){
     /*дів контейнер */
@@ -661,8 +663,8 @@ text-align: left;
         gap: 48px 24px;
         }
         .portfolio-item {
+        width: calc((100% - 48px)/3);
         box-shadow: none;
-        flex-basis: calc((100% - 48px) / 3);
         transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
         .portfolio-item:hover {
@@ -762,6 +764,7 @@ font-weight: 500;
         justify-content: center;
         flex-wrap: wrap;
     }
+
 .form-button {
     display: flex;
         justify-content: center;
@@ -791,6 +794,7 @@ font-weight: 500;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     color: #ffffff;
+    margin-bottom: 16px;
 
 }
 ::placeholder {
@@ -807,10 +811,10 @@ font-weight: 500;
             flex-wrap: wrap;
             align-items: baseline;
             justify-content: flex-start;
-            margin-left: 108px;
             padding: 0;
             row-gap: 72px;
             column-gap: 24px;
+            width: 584px;
         }
         .container-content {
         max-width: 264px;
@@ -1097,6 +1101,7 @@ input:checked+label>span {
 /* mobile menu */
 .mobile-menu {
     position: fixed;
+    padding: 72px 0;
     top: 0;
     left: 0;
     z-index: 99999;
@@ -1108,11 +1113,11 @@ input:checked+label>span {
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-    .mobile-menu.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: auto;
-}
+        .mobile-menu.is-open {
+            opacity: 1;
+            visibility: visible;
+            pointer-events: auto;
+        }
 .mobile-menu-container {
     position: relative;
     padding-top: 72px;
@@ -1165,7 +1170,4 @@ input:checked+label>span {
     color: #434455;
 }
 @media screen and (min-width: 768px) {
-    .mobile-menu {
-        display: none;
-    }
 }
