--- a/css/styles.css
+++ b/css/styles.css
@@ -1108,9 +1108,6 @@ input:checked+label>span {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    opacity: 0;
-    visibility: hidden;
-    pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
         .mobile-menu.is-open {
@@ -1149,12 +1146,16 @@ input:checked+label>span {
     gap: 40px;
 }
 .menu-link-m{
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.11;
-        letter-spacing: 0.02em;
-        color: #2e2f42;
-        }
+font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+}
+.menu-link-mob{
+                font-weight: 500;
+                font-size: 20px;
+                line-height: 120%;
+                letter-spacing: 0.02em;}
 .mobile-menu-contacts-list {
     display: flex;
     flex-direction: column;
@@ -1162,12 +1163,26 @@ input:checked+label>span {
     margin-bottom: 48px;
     font-style: normal;
 }
-.traling-icons {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #434455;
+.social-media-list-menu{
+    display: flex;
+        justify-content: center;
+        gap: 40px;
 }
+.social-network-items{
+    width: 40px;
+    height: 40px;
+}
+.traling-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 @media screen and (min-width: 768px) {
 }
