--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,10 @@ h6,
 p {
     margin: 0;
 }
+input,
+textarea {
+    font-family: inherit;
+}
 section{
     padding-top: 96px;
     padding-bottom: 96px;
@@ -92,6 +96,7 @@ img {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
+        padding: 16px 0;
 }
 
 .header-container {
@@ -199,7 +204,14 @@ align-items: center;
     height: 4px;
     border-radius: 2px;
     background-color: #404bbf;
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+}
+.menu-link:hover::after,
+.menu-link:focus::after,
+.menu-link.current::after {
+    opacity: 1;
 }
 .contact_info {
     font-style: normal;
@@ -1108,7 +1120,11 @@ input:checked+label>span {
     width: 100%;
     height: 100%;
     background-color: #fff;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
         .mobile-menu.is-open {
             opacity: 1;
@@ -1150,18 +1166,27 @@ font-weight: 700;
     font-size: 36px;
     line-height: 111%;
     letter-spacing: 0.02em;
+    color: #2e2f42;
 }
-.menu-link-mob{
-                font-weight: 500;
-                font-size: 20px;
-                line-height: 120%;
-                letter-spacing: 0.02em;}
-.mobile-menu-contacts-list {
+.mobile-menu-contacts-list{
+font-weight: 500;
+font-size: 20px;
+line-height: 120%;
+letter-spacing: 0.02em;
+color: #434455;
+}
+/*.mobile-menu-contacts-list {
     display: flex;
     flex-direction: column;
     gap: 24px;
     margin-bottom: 48px;
     font-style: normal;
+}*/
+.mobile-menu-nav-link:hover,
+.mobile-menu-nav-link:focus,
+.mobile-menu-contacts-link:hover,
+.mobile-menu-contacts-link:focus {
+    color: #404bbf;
 }
 .social-media-list-menu{
     display: flex;
@@ -1184,5 +1209,13 @@ font-weight: 700;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.traling-icons:hover,
+.traling-icons:focus {
+    background-color: #404bbf;
+}
+
 @media screen and (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
 }
